--- a/cicd-demo-app/angular.json
+++ b/cicd-demo-app/angular.json
@@ -35,7 +35,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": 3mb",
+                  "maximumWarning": "3mb",
                   "maximumError": "10mb"
                 },
                 {
